add api /deal/{statementId}/sign
