# dossier/src/main/java/neoflex/chulkov/dto/EmailMessageRequestDto.java
@@ -1,13 +1,0 @@
-package neoflex.chulkov.dto;
-
-import java.time.LocalDate;
-
-public record EmailMessageRequestDto(
-        String firstName,
-        String lastName,
-        String middleName,
-        String email,
-        String statementId,
-        LocalDate birthday
-) {
-}
