# dossier/src/main/java/neoflex/chulkov/dto/SesMessageDto.java
@@ -1,0 +1,9 @@
+package neoflex.chulkov.dto;
+
+public record SesMessageDto(
+        String ses,
+        String email,
+        String statementId
+) {
+
+}
